# dpp-test-bot

./: CMakeLists.txt
src/: bot.cpp  bot.h  config.cpp  config.h  event.cpp  event.h  logger.cpp  logger.h  main.cpp  slash.cpp  slash.h
src/commands/: avatar.cpp  hello.cpp  ping.cpp
src/events/: ready.cpp  slashcommand.cpp
